--- a/Mission06_belengv/Views/Shared/_Layout.cshtml
+++ b/Mission06_belengv/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddMovies">Add Movies</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Collection">Collection</a>
+                        </li>
                     </ul>
                 </div>
             </div>
